--- a/src/index.pug
+++ b/src/index.pug
@@ -9,4 +9,6 @@ block main
 			+mini_card('bg-yosemite', 'Yosemite', 'A break from the world', 'bg-secondary', 'text-white')
 			+mini_card('bg-seattle', 'Seattle', 'Big City', 'bg-white', 'text-tertiary')
 			+mini_card('bg-switzerland', 'Switzerland', 'Big City', 'bg-secondary', 'text-white', "mr-4")
-	section#featured_income
+	section#trending
+	section#FAQs
+	section#about-us
