--- a/src/styles/input.css
+++ b/src/styles/input.css
@@ -3,12 +3,12 @@
 @tailwind utilities;
 @tailwind variants;
 
-.card {
-	@apply h-56 shadow-md rounded-lg snap-center;
+.mini-card {
+  @apply h-56 shadow-md rounded-lg snap-center;
 }
-.card-img {
-	@apply w-44 max-w-xs h-3/5 bg-cover rounded-t-lg;
+.mini-card__img {
+  @apply w-44 max-w-xs h-3/5 bg-cover rounded-t-lg;
 }
-.card-description {
-	@apply h-2/5 p-3 space-y-1 rounded-b-lg;
+.mini-card__description {
+  @apply h-2/5 p-3 space-y-1 rounded-b-lg;
 }
