--- a/src/templates/components/globals.pug
+++ b/src/templates/components/globals.pug
@@ -1,6 +1,6 @@
 mixin mini_card(image, title, description, bg_color, text_color, margin='m-0')
-	section.card(class=margin)
-		figure.card-img(class=image)
-		article.card-description(class=bg_color class=text_color)
+	section.mini-card(class=margin)
+		figure.mini-card__img(class=image)
+		article.mini-card__description(class=bg_color class=text_color)
 			h4.font-bold=title
 			p.text-xs=description
