--- a/src/templates/components/globals.pug
+++ b/src/templates/components/globals.pug
@@ -1,4 +1,4 @@
-mixin mini_card(image, title, description, bg_color, text_color, margin='m-0')
+mixin mini-card(image, title, description, bg_color, text_color, margin='m-0')
 	section.mini-card(class=margin)
 		figure.mini-card__img(class=image)
 		article.mini-card__description(class=bg_color class=text_color)
