--- a/src/index.pug
+++ b/src/index.pug
@@ -1,32 +1,23 @@
 extend templates/template.pug
 
 block main
-	section#recommended.w-full.pt-6
-		h2.title.pl-4 Our Recommendations
-		.mini-cards-container.pt-6.pb-1.flex.gap-4.overflow-x-scroll.overscroll-x-contain.scroll-smooth
-			+mini-card('bg-norway', 'Norway', 'Beautiful landscapes', 'bg-secondary', 'text-white', "ml-4")
-			+mini-card('bg-new_york', 'New York', 'Concrete jungle', 'bg-white', 'text-tertiary')
-			+mini-card('bg-yosemite', 'Yosemite', 'A break from the world', 'bg-secondary', 'text-white')
-			+mini-card('bg-seattle', 'Seattle', 'Big City', 'bg-white', 'text-tertiary')
-			+mini-card('bg-switzerland', 'Switzerland', 'Big City', 'bg-secondary', 'text-white', "mr-4")
-	section#trending-stays.w-full.pt-6.px-4
-		h2.title.mb-6 Trending Stays
-		+card('bg-chicago', 'Chicago', '2 rooms, bathroom and kitchen.')
-		+card('bg-LA', 'Los Angeles', '4 rooms, 3 bathrooms,  kitchen and private pool.')
-		+card('bg-miami', 'Miami', '3 rooms, 2 bathrooms,  kitchen and amazing sea view.')
-		+card('bg-bali', 'Bali', '2 rooms, 2 bathrooms,  kitchen and private pool.')
-	section#FAQs.w-full.pt-1.px-6
-		h2.title.mb-4 FAQs
-		+FAQ('Payment Methods')
-		+FAQ('Cancellation Policy')
-		+FAQ('Long Stays')
-	section#about-us.inline-block.w-full.mt-4.px-6.pt-4.bg-gray-100.border-y-2.border-gray-200.text-sm.font-medium.text-gray-400
-		h3.text-xl.font-semibold.mb-4 About Us
-		.flex.flex-col.gap-2
-			p Investors
-			p Jobs
-			p Privacy policy
-			p Terms and Conditions
-			p Platzi Travel, inc
-			p Follow Us
-	section#tab-bar
+	main.flex.flex-col.gap-6.w-full.py-6
+		section#recommended.w-full
+			h2.title.pl-4 Our Recommendations
+			.mini-cards-container.pt-6.pb-2.flex.gap-4.overflow-x-scroll.overscroll-x-contain.scroll-smooth
+				+mini-card('bg-norway', 'Norway', 'Beautiful landscapes', 'bg-secondary', 'text-white', "ml-4")
+				+mini-card('bg-new_york', 'New York', 'Concrete jungle', 'bg-white', 'text-tertiary')
+				+mini-card('bg-yosemite', 'Yosemite', 'A break from the world', 'bg-secondary', 'text-white')
+				+mini-card('bg-seattle', 'Seattle', 'Big City', 'bg-white', 'text-tertiary')
+				+mini-card('bg-switzerland', 'Switzerland', 'Big City', 'bg-secondary', 'text-white', "mr-4")
+		section#trending-stays.w-full.px-4.flex.flex-col.gap-6
+			h2.title Trending Stays
+			+card('bg-chicago', 'Chicago', '2 rooms, bathroom and kitchen.')
+			+card('bg-LA', 'Los Angeles', '4 rooms, 3 bathrooms,  kitchen and private pool.')
+			+card('bg-miami', 'Miami', '3 rooms, 2 bathrooms,  kitchen and amazing sea view.')
+			+card('bg-bali', 'Bali', '2 rooms, 2 bathrooms,  kitchen and private pool.')
+		section#FAQs.w-full.px-6.py-4.flex.flex-col.gap-2
+			h2.title.mb-2 FAQs
+			+FAQ('Payment Methods')
+			+FAQ('Cancellation Policy')
+			+FAQ('Long Stays')
