--- a/src/templates/footer.pug
+++ b/src/templates/footer.pug
@@ -1,1 +1,8 @@
-footer
+footer#about-us.w-full.px-6.py-4.bg-gray-100.border-y-2.border-gray-200.text-sm.font-medium.text-gray-400.flex.flex-col.gap-2
+	h3.text-xl.font-semibold.mb-2 About Us
+	p Investors
+	p Jobs
+	p Privacy policy
+	p Terms and Conditions
+	p Platzi Travel, inc
+	p Follow Us
