--- a/src/styles/input.css
+++ b/src/styles/input.css
@@ -19,7 +19,7 @@
 }
 
 .mini-card {
-  @apply h-56 shadow-md rounded-lg transition ease-in-out duration-500 hover:-translate-y-2 hover:scale-110;
+  @apply h-56 shadow-md rounded-lg transition ease-in-out delay-100 duration-200 hover:-translate-y-2 hover:scale-110;
 }
 .mini-card__img {
   @apply w-44 max-w-xs h-3/5 bg-cover bg-no-repeat rounded-t-lg;
@@ -43,4 +43,5 @@
 }
 .button-animation {
   @apply transition ease-in-out duration-200 delay-100 hover:-translate-y-1 hover:scale-110 hover:bg-primary hover:text-white;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
