Estilos del Navbar

--- a/src/templates/components/globals.pug
+++ b/src/templates/components/globals.pug
@@ -1,7 +1,9 @@
+-var list_about_us = ['Investors', 'Jobs', 'Privacy policy', 'Terms and Conditions', 'Platzi Travel, inc', 'Follow Us']
+
 mixin mini-card(image, title, description, bg_color, text_color, margin='m-0')
-	section.mini-card(class=margin)
-		figure.mini-card__img(class=image)
-		article.mini-card__description(class=bg_color class=text_color)
+	section.mini-card(class= margin)
+		figure.mini-card__img(class= image)
+		article.mini-card__description(class=bg_color class= text_color)
 			h4.font-bold=title
 			p.text-xs=description
 
@@ -9,9 +11,9 @@ mixin card(image, title, description)
 	section.card
 		.content
 			article.card__description
-				h3.text-2xl.font-bold.tracking-wider.mb-3=title
-				p.text-base.font-normal=description
-			figure.card__img(class=image)
+				h3.text-2xl.font-bold.tracking-wider.mb-3= title
+				p.text-base.font-normal= description
+			figure.card__img(class= image)
 mixin FAQ(title)
-	h3.subtitle=title
+	h3.subtitle= title
 	p.description We accept VISA, MasterCard, American Express, Paypal and Binance.
