--- a/src/templates/components/navbar.pug
+++ b/src/templates/components/navbar.pug
@@ -1,1 +1,3 @@
-nav
+nav.w-full.py-5.flex.justify-end
+	figure.night.py-2.px-5.rounded-full.bg-white.shadow-lg
+		img(src="./assets/svg/moon.svg" alt="Icono Modo nocturno")
