--- a/src/templates/footer.pug
+++ b/src/templates/footer.pug
@@ -1,11 +1,7 @@
 footer#about-us.w-full.px-6.pt-4.pb-8.bg-gray-100.border-y-2.border-gray-200.text-sm.font-medium.text-gray-300.flex.flex-col.gap-3
 	h3.text-xl.font-semibold.mb-2 About Us
-	a(href="#").w-fit Investors
-	a(href="#").w-fit Jobs
-	a(href="#").w-fit Privacy policy
-	a(href="#").w-fit Terms and Conditions
-	a(href="#").w-fit Platzi Travel, inc
-	a(href="#").w-fit Follow Us
+	each item in list_about_us
+		a(href="#").w-fit= item
 	.social-media.flex.gap-4.w-fit
 		a(href="#")
 			img(src="./assets/svg/twitter.svg" alt="Icono de Twitter")
