--- a/src/templates/head.pug
+++ b/src/templates/head.pug
@@ -2,6 +2,7 @@ head
 	meta(charset='UTF-8')
 	meta(http-equiv='X-UA-Compatible' content='IE=edge')
 	meta(name='viewport' content='width=device-width, initial-scale=1.0')
+	meta(name='theme-color' content='#CC2D4A')
 	link(rel='icon' type='image' sizes='20x20' href='./favicon.ico')
 	link(rel='stylesheet' href='./css/min.output.css')
 	link(rel='preconnect' href='https://fonts.googleapis.com')
