--- a/src/templates/header.pug
+++ b/src/templates/header.pug
@@ -1,9 +1,9 @@
-header#home
+header#home.w-full.px-6.flex.flex-col.absolute.items-center(class='h-[28rem]')
 	include components/navbar.pug
-	.w-full.flex.flex-col.absolute.space-y-80.pt-4.items-center
-		label(for="search").flex.align-items-center.gap-4.input-animation.py-3.px-5.rounded-full.shadow-lg.bg-white(class='w-5/6')
-			span.flex.align-items-center
-				img.w-5(src="./assets/svg/search.svg" alt="Icono de Busqueda")
-			input#search.text-start.outline-none.w-full.text-md.font-semibold(type='search' placeholder='San Francisco')
-		button.button-animation.bg-white.text-primary.text-md.font-semibold.p-3.rounded-full(class='w-1/2') Explore More
-	figure.w-full: img(src='./assets/img/sanFrancisco.jpg' alt='Fondo de San Francisco')
+	label(for="search").w-full.flex.align-items-center.gap-4.input-animation.py-3.px-5.rounded-full.shadow-lg.bg-white
+		span.w-auto.flex.align-items-center
+			img.w-5(src="./assets/svg/search.svg" alt="Icono de Busqueda")
+		input#search.text-start.outline-none.w-full.text-md.font-semibold(type='search' placeholder='San Francisco')
+	button.button-animation.bg-white.text-primary.text-md.font-semibold.p-3.rounded-full.mt-56(class='w-3/5') Explore More
+figure.w-full(class='h-[28rem]')
+	img.w-full.h-full(src='./assets/img/sanFrancisco.jpg' alt='Fondo de San Francisco')
