--- a/src/index.pug
+++ b/src/index.pug
@@ -1,7 +1,7 @@
 extend templates/template.pug
 
 block main
-	main.flex.flex-col.gap-6.w-full.py-6
+	main#home.flex.flex-col.gap-6.w-full.py-6
 		section#recommended.w-full
 			h2.title.pl-4 Our Recommendations
 			.mini-cards-container.pt-6.pb-2.flex.gap-4.overflow-x-scroll.overscroll-x-contain.scroll-smooth
