--- a/src/styles/input.css
+++ b/src/styles/input.css
@@ -41,5 +41,9 @@
 }
 .button-animation {
   @apply transition ease-in-out duration-200 delay-100 hover:-translate-y-1 hover:scale-110 hover:bg-primary hover:text-white;
+}
+
+#tabBar,
+button {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
