--- a/src/templates/header.pug
+++ b/src/templates/header.pug
@@ -1,4 +1,4 @@
-header#home.w-full.px-6.flex.flex-col.absolute.items-center(class='h-[28rem]')
+header#search.w-full.px-6.flex.flex-col.absolute.items-center(class='h-[28rem]')
 	include components/navbar.pug
 	label(for="search").w-full.flex.align-items-center.gap-4.input-animation.py-3.px-5.rounded-full.shadow-lg.bg-white
 		span.w-auto.flex.align-items-center
