--- a/src/view/template/header.pug
+++ b/src/view/template/header.pug
@@ -1,5 +1,5 @@
-header#search.w-full.px-6.flex.flex-col.absolute.items-center(class='h-[28rem]')
-	include components/navbar.pug
+header.w-full.px-6.flex.flex-col.absolute.items-center(class='h-[28rem]')
+	include ../components/navbar.pug
 	label(for="search").w-full.flex.align-items-center.gap-4.input-animation.py-3.px-5.rounded-full.shadow-lg.bg-white
 		span.w-auto.flex.align-items-center
 			img.w-5(src="./assets/svg/search.svg" alt="Icono de Busqueda")
