--- a/src/view/template/template.pug
+++ b/src/view/template/template.pug
@@ -1,9 +1,9 @@
-include components/globals.pug
+include ../components/globals.pug
 
 doctype html
 html(lang="en")
 	include head.pug
-	body.w-screen.font-Montserrat
+	body.w-screen.font-Montserrat.box-border
 		include header.pug
 		block main
 		include footer.pug
