--- a/src/view/components/navbar.pug
+++ b/src/view/components/navbar.pug
@@ -1,3 +1,3 @@
 nav.w-full.py-5.flex.justify-end
-	figure.night.py-2.px-5.rounded-full.bg-white.shadow-lg
+	figure.dark.night-mode.py-2.px-5.rounded-full.bg-white.shadow-lg.cursor-pointer
 		img(src="./assets/svg/moon.svg" alt="Icono Modo nocturno")
