--- a/src/view/index.pug
+++ b/src/view/index.pug
@@ -1,15 +1,15 @@
-extend templates/template.pug
+extend template/template.pug
 
 block main
 	main#home.flex.flex-col.gap-6.w-full.py-6
 		section#recommended.w-full
 			h2.title.pl-4 Our Recommendations
-			.mini-cards-container.pt-6.pb-2.flex.gap-4.overflow-x-scroll.overscroll-x-contain.scroll-smooth
-				+mini-card('bg-norway', 'Norway', 'Beautiful landscapes', 'bg-secondary', 'text-white', "ml-4")
+			.mini-cards-container.pt-6.pb-2.flex.gap-5.overflow-x-scroll.overscroll-x-contain.scroll-smooth
+				+mini-card('bg-norway', 'Norway', 'Beautiful landscapes', 'bg-secondary', 'text-white', "ml-6")
 				+mini-card('bg-new_york', 'New York', 'Concrete jungle', 'bg-white', 'text-tertiary')
 				+mini-card('bg-yosemite', 'Yosemite', 'A break from the world', 'bg-secondary', 'text-white')
 				+mini-card('bg-seattle', 'Seattle', 'Big City', 'bg-white', 'text-tertiary')
-				+mini-card('bg-switzerland', 'Switzerland', 'Big City', 'bg-secondary', 'text-white', "mr-4")
+				+mini-card('bg-switzerland', 'Switzerland', 'Big City', 'bg-secondary', 'text-white', "mr-6")
 		section#trending-stays.w-full.px-4.flex.flex-col.gap-6
 			h2.title Trending Stays
 			+card('bg-chicago', 'Chicago', '2 rooms, bathroom and kitchen.')
