--- a/src/view/template/template.pug
+++ b/src/view/template/template.pug
@@ -3,7 +3,7 @@ include ../components/globals.pug
 doctype html
 html(lang="en")
 	include head.pug
-	body.w-screen.font-Montserrat.box-border
+	body.w-full.font-Montserrat.box-border
 		include header.pug
 		block main
 		include footer.pug
