--- a/src/view/components/tabBar.pug
+++ b/src/view/components/tabBar.pug
@@ -1,4 +1,4 @@
-section#tabBar.w-full.py-5.flex.justify-center.gap-10.sticky.bottom-0.bg-white.border.border-gray-200
+#tabBar(class='md:hidden landscape:hidden').w-full.py-5.flex.justify-center.gap-10.sticky.bottom-0.bg-white.border.border-gray-200
 	a(href="#")
 		img(src="./assets/svg/home.svg" alt="Icono del Home")
 	a(href="#recommended")
