--- a/src/view/template/footer.pug
+++ b/src/view/template/footer.pug
@@ -7,4 +7,5 @@ footer#about-us.w-full.px-6.pt-4.pb-8.bg-gray-100.border-t.border-gray-200.text-
 			img(src="./assets/svg/twitter.svg" alt="Icono de Twitter")
 		a(href="#")
 			img(src="./assets/svg/instagram.svg" alt="Icono de Instagram")
-include ../components/tabBar.pug
+.tabBar(class='lg:hidden').sticky.bottom-0
+	include ../components/tabBar.pug
