--- a/src/view/template/header.pug
+++ b/src/view/template/header.pug
@@ -5,7 +5,7 @@ header.w-full.px-6.flex.flex-col.items-center(class='h-[30rem] md:px-0 md:items-
 		span.w-auto.flex.align-items-center
 			img.w-5(src="./assets/svg/search.svg" alt="Icono de Busqueda")
 		input#search.text-start.outline-none.w-full.text-md.font-semibold(type='search' placeholder='San Francisco')
-	h1.hidden.z-10.text-3xl.font-bold.w-80.ml-14.mt-24(class='md:block lg:w-96 lg:text-4xl lg:mt-32')
+	h1.hidden.z-10.text-3xl.font-bold.w-80.ml-14.mt-24(class='md:block lg:w-96 lg:text-4xl lg:mt-32 lg:ml-20')
 		| Find More Locations like this
-	button.z-10.button-animation.bg-white.text-primary.text-md.font-semibold.p-3.rounded-full.mt-64.shadow-lg(class='w-3/5 md:w-44 md:mt-6 md:ml-14') 
+	button.z-10.button-animation.bg-white.text-primary.text-md.font-semibold.p-3.rounded-full.mt-64.shadow-lg(class='w-3/5 md:w-44 md:mt-4 lg:mt-6 md:ml-14 lg:ml-20')
 		| Explore More
