--- a/src/view/components/navbar.pug
+++ b/src/view/components/navbar.pug
@@ -1,6 +1,6 @@
 nav.z-10.w-full.py-5.flex.justify-end(class='md:bg-white md:justify-between md:px-10 md:py-2 md:items-center lg:px-16 lg:py-3 shadow-sm')
 	a(href="#" class='md:flex').hidden.items-center.gap-3
-		img(src="./assets/svg/favicon.svg" alt="Icono de la pagina").w-10(class='')
+		img(src="./assets/svg/favicon.svg" alt="Icono de la pagina").w-10
 		span.text-primary.text-lg.font-bold.tracking-wide
 			| Travel Page
 	label(for="search" class='md:w-1/2 md:flex lg:hidden').hidden.z-10.w-full.items-center.gap-4.py-3.px-5.rounded-full.shadow-sm
