--- a/src/view/components/globals.pug
+++ b/src/view/components/globals.pug
@@ -7,8 +7,8 @@ mixin mini-card(image, title, description, bg_color, text_color, margin='m-0')
 			h4.font-bold=title
 			p.text-xs=description
 
-mixin card(image, title, description, col_span='md:col-span-full' row_span='md:col-span-1')
-	section.card(class= col_span class= col_span)
+mixin card(image, title, description, col_span, row_span='md:row-span-1')
+	section.card(class=col_span class=row_span)
 		.content
 			article.card__description
 				h3.text-2xl.font-bold.tracking-wider.mb-3= title
