--- a/src/view/components/navbar.pug
+++ b/src/view/components/navbar.pug
@@ -1,7 +1,7 @@
-nav.z-10.w-full.py-5.flex.justify-end(class='md:bg-white md:justify-between md:px-10 md:py-2 md:items-center lg:px-16 lg:py-3 shadow-sm')
-	a(href="#" class='md:flex').hidden.items-center.gap-3
+nav.z-10.w-full.py-5.flex.justify-end(class='md:bg-white md:justify-between md:px-7 md:py-2 md:items-center lg:px-9 lg:py-3 md:shadow-sm xl:shadow-none')
+	a(href="#" class='md:flex').hidden.items-center.gap-1
 		img(src="./assets/svg/favicon.svg" alt="Icono de la pagina").w-10
-		span.text-primary.text-lg.font-bold.tracking-wide
+		span.text-primary.text-lg.font-bold
 			| Travel Page
 	label(for="search" class='md:w-1/2 md:flex lg:hidden').hidden.z-10.w-full.items-center.gap-4.py-3.px-5.rounded-full.shadow-sm
 		span.w-auto.flex.align-items-center
