--- a/src/view/components/tabBar.pug
+++ b/src/view/components/tabBar.pug
@@ -1,4 +1,4 @@
-#tabBar(class='md:hidden landscape:hidden lg:flex lg:landscape:flex lg:static lg:border-none lg:py-0 lg:text-primary lg:font-bold lg:gap-8 xl:gap-12 xl:font-semibold').w-full.py-5.flex.justify-center.gap-10.bg-white.border.border-gray-200
+#tabBar(class='md:hidden landscape:hidden lg:flex lg:landscape:flex lg:static lg:border-none lg:py-0 lg:text-primary lg:font-bold lg:gap-8 xl:gap-12 lg:text-sm lg- xl:font-semibold').w-full.py-5.flex.justify-center.gap-10.bg-white.border.border-gray-200
 	a(href="#" class='lg:hidden')
 		img(src="./assets/svg/home.svg" alt="Icono del Home")
 	a(href="#recommended")
