--- a/src/styles/input.css
+++ b/src/styles/input.css
@@ -7,17 +7,17 @@
 }
 
 .subtitle {
-  @apply text-lg font-semibold tracking-wide text-primary;
+  @apply text-lg md:text-xl font-semibold tracking-wide text-primary;
 }
 .description {
-  @apply text-sm font-semibold mb-3;
+  @apply text-sm lg:font-medium font-semibold mb-3 lg:w-[40rem];
 }
 
 .mini-cards-container::-webkit-scrollbar {
   display: none;
 }
 .mini-card {
-  @apply h-56 md:h-60 shadow-md rounded-lg transition ease-in-out delay-100 duration-200 hover:-translate-y-2 hover:scale-110;
+  @apply h-56 md:h-60 shadow-md rounded-lg transition ease-in-out delay-100 duration-200 hover:-translate-y-2 hover:scale-110 lg:cursor-pointer;
 }
 .mini-card__img {
   @apply w-44 md:w-52 h-3/5 bg-cover bg-no-repeat rounded-t-lg;
@@ -30,10 +30,10 @@
   @apply my-1 mx-2 md:m-0 rounded-2xl overflow-hidden;
 }
 .card__description {
-  @apply w-3/4 h-[30rem] pl-8 pr-16 pt-12 absolute text-white transition ease-in-out delay-100 duration-200 hover:translate-y-10 hover:translate-x-4 hover:scale-110;
+  @apply w-3/4 h-[30rem] pl-8 pr-16 pt-12 absolute text-white transition ease-in-out delay-100 duration-200 hover:translate-y-10 hover:translate-x-4 hover:scale-110 lg:cursor-pointer;
 }
 .card__img {
-  @apply w-full h-[36rem] md:h-[26rem] bg-cover bg-center bg-no-repeat;
+  @apply w-full h-[36rem] md:max-h-[26rem] bg-cover bg-center bg-no-repeat;
 }
 
 .night-mode {
