--- a/src/view/template/header.pug
+++ b/src/view/template/header.pug
@@ -1,5 +1,5 @@
 header.w-full.px-6.flex.flex-col.items-center(class='h-[30rem] md:px-0 md:items-start lg:h-[36rem]')
-	figure.w-full.absolute.bg-sanFrancisco.bg-cover.bg-top.bg-no-repeat(class='h-[30rem] sm:bg-sanFranciscoDesktop sm:bg-local lg:h-[36rem]')
+	figure.w-full.absolute.bg-sanFrancisco.bg-cover.bg-top.bg-no-repeat(class='h-[30rem] sm:bg-sanFranciscoDesktop sm:bg-local lg:h-[36rem] xl:max-w-6xl')
 	include ../components/navbar.pug
 	label(for="search" class='md:mt-12 md:hidden md:').z-10.w-full.flex.items-center.gap-4.input-animation.py-3.px-5.rounded-full.shadow-lg.bg-white
 		span.w-auto.flex.align-items-center
