--- a/src/view/components/globals.pug
+++ b/src/view/components/globals.pug
@@ -7,11 +7,11 @@ mixin mini-card(image, title, description, bg_color, text_color, margin='m-0')
 			h4.font-bold=title
 			p.text-xs=description
 
-mixin card(image, title, description, col_span, row_span='md:row-span-1', height)
+mixin card(image, title, description, col_span, row_span='md:row-span-1', height, width)
 	section.card(class=col_span class=row_span)
-		.content
-			article.card__description
-				h3.text-2xl.font-bold.tracking-wider.mb-3= title
+		.content(class='grid lg:justify-items-end')
+			article.card__description(class=width)
+				h3.text-2xl.font-bold.tracking-wider.mb-4(class='lg:mb-2')= title
 				p.text-base.font-normal= description
 			figure.card__img(class= image class=height)
 
