--- a/src/view/components/navbar.pug
+++ b/src/view/components/navbar.pug
@@ -11,5 +11,5 @@ nav.z-10.w-full.py-5.flex.justify-end(class='md:bg-white md:justify-between md:p
 		include tabBar.pug
 	figure.night-mode.py-2.px-5.rounded-full.bg-white.shadow-lg.cursor-pointer(class='md:p-0 md:bg-transparent md:transition-none md:active:translate-y-0 md:active:shadow-none md:shadow-none md:flex md:gap-8 md:cursor-default')
 		img.hidden(src="./assets/svg/search.svg" alt="Icono de Busqueda" class='lg:block lg:w-5 md:cursor-pointer')
-		img(src="./assets/svg/moon.svg" alt="Icono de modo nocturno" class='md:w-5 md:cursor-pointer')
+		img#toggle(src="./assets/svg/moon.svg" alt="Icono de modo nocturno" class='md:w-5 md:cursor-pointer')
 		img.hidden(src="./assets/svg/user.svg" alt="Icono de usuario" class='md:block md:w-5')
