--- a/src/view/index.pug
+++ b/src/view/index.pug
@@ -5,18 +5,18 @@ block main
 		section#recommended.w-full
 			h2.title.pl-5(class='md:pl-10 xl:pl-5') Our Recommendations
 			.mini-cards-container.pt-6.pb-2.flex.gap-5.overflow-x-scroll.overscroll-x-contain.scroll-smooth(class='md:gap-7 md:pt-8 .5xl:justify-center')
-				+mini-card('bg-norway', 'Norway', 'Beautiful landscapes', 'bg-secondary', 'text-white', "ml-6")
-				+mini-card('bg-new_york', 'New York', 'Concrete jungle', 'bg-white', 'text-tertiary')
-				+mini-card('bg-yosemite', 'Yosemite', 'A break from the world', 'bg-secondary', 'text-white')
-				+mini-card('bg-seattle', 'Seattle', 'Big City', 'bg-white', 'text-tertiary')
-				+mini-card('bg-switzerland', 'Switzerland', 'Big City', 'bg-secondary', 'text-white', "mr-6")
+				+mini-card('bg-norway', 'Norway', 'Beautiful landscapes')
+				+mini-card('bg-new_york', 'New York', 'Concrete jungle')
+				+mini-card('bg-yosemite', 'Yosemite', 'A break from the world')
+				+mini-card('bg-seattle', 'Seattle', 'Big City')
+				+mini-card('bg-switzerland', 'Switzerland', 'Big City')
 		section#trending-stays.w-full
 			h2.title.pl-5.pb-6(class='md:pl-10 xl:pl-5') Trending Stays
 			.card-container.px-4.grid.gap-6(class='md:px-10 md:grid-cols-5 md:grid-rows-3 lg:grid-rows-layout')
-				+card('bg-chicago', 'Chicago', '2 rooms, bathroom and kitchen.', 'md:col-span-2 lg:col-span-full lg:row-span-1', '', 'lg:max-h-[30rem]', 'md:w-1/5 lg:w-auto')
-				+card('bg-LA', 'Los Angeles', '4 rooms, 3 bathrooms,  kitchen and private pool.', 'md:col-span-3 lg:col-span-full lg:row-span-2 lg:col-span-2', '', 'lg:max-h-[36rem]', 'md:w-2/5 lg:w-1/5')
-				+card('bg-miami', 'Miami', '3 rooms, 2 bathrooms,  kitchen and amazing sea view.', 'md:col-span-full lg:col-span-3', '', 'lg:max-h-[17rem]', 'md:w-1/5 lg:w-1/3')
-				+card('bg-bali', 'Bali', '2 rooms, 2 bathrooms,  kitchen and private pool.', 'md:col-span-full lg:col-span-3', '', 'lg:max-h-[17rem]', 'md:w-1/3 lg:w-1/5')
+				+card('bg-chicago', 'Chicago', '2 rooms, bathroom and kitchen.', 'md:col-span-2 lg:col-span-full lg:row-span-1 md:row-span-1', 'lg:max-h-[30rem]', 'md:w-1/5 lg:w-auto')
+				+card('bg-LA', 'Los Angeles', '4 rooms, 3 bathrooms,  kitchen and private pool.', 'md:col-span-3 lg:col-span-full lg:row-span-2 lg:col-span-2 md:row-span-1', 'lg:max-h-[36rem]', 'md:w-2/5 lg:w-1/5')
+				+card('bg-miami', 'Miami', '3 rooms, 2 bathrooms,  kitchen and amazing sea view.', 'md:col-span-full lg:col-span-3 md:row-span-1', 'lg:max-h-[17rem]', 'md:w-1/5 lg:w-1/3')
+				+card('bg-bali', 'Bali', '2 rooms, 2 bathrooms,  kitchen and private pool.', 'md:col-span-full lg:col-span-3 md:row-span-1', 'lg:max-h-[17rem]', 'md:w-1/3 lg:w-1/5')
 		section#FAQs.w-full.px-6.pb-2.flex.flex-col.gap-2(class='md:pl-10 xl:pl-5')
 			h2.title.mb-2(class='md:mb-4') FAQs
 			+FAQ('Payment Methods')
